--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <h3 class="text-center">Songs Display</h3>
+                <h3 class="text-center">Songs Playlist</h3>
                 <div class="slider-container">
                     <div class="slider-element" style="min-width: 230px">
                         <div class="card">
